tests/NormalTests/paczka1/fuzzy1/38309276.err
Error in line 2: PB8rNeb6 A923 37,3
Error in line 5: A968 A155 925,1
Error in line 19: PB8rNeb6 A923 -3,9
Error in line 6: Tz7JZR7pKRu A968 27,5
Error in line 22: uR1uGe A968 21,7
Error in line 29: PB8rNeb6 A923 40,2
Error in line 36: PB8rNeb6 A155 11,2
